# Vocobox

./: .gitignore  CMakeLists.txt  Info.plist  README.md  build.sh
src/: talkbox.cpp  vocobox-common.h
